--- a/index.html
+++ b/index.html
@@ -85,19 +85,21 @@
 
   <section class="cars">
     <div class="car">
-      <img src="https://via.placeholder.com/400x250?text=BMW+320d+M+Sport" alt="BMW 320d M Sport">
+      <img src="https://images.autotrader.co.uk/image-gallery/202309287328156?width=800&height=600" alt="BMW 320d M Sport">
       <h3>2017 BMW 320d M Sport</h3>
       <p>Auto | Diesel | 80K miles</p>
       <p>£7,995</p>
     </div>
+
     <div class="car">
-      <img src="https://via.placeholder.com/400x250?text=Seat+Leon+FR" alt="Seat Leon FR">
+      <img src="https://media.autotrader.co.uk/image-gallery/202403057761137?width=800&height=600" alt="Seat Leon FR">
       <h3>2015 Seat Leon 1.4 TSI FR</h3>
       <p>Cat N | Petrol | 87K miles</p>
       <p>£4,495</p>
     </div>
+
     <div class="car">
-      <img src="https://via.placeholder.com/400x250?text=Ford+Focus+ST-Line" alt="Ford Focus">
+      <img src="https://media.autotrader.co.uk/image-gallery/202405177932268?width=800&height=600" alt="Ford Focus">
       <h3>2016 Ford Focus ST-Line</h3>
       <p>Manual | Petrol | 60K miles</p>
       <p>£5,250</p>
