--- a/index.html
+++ b/index.html
@@ -83,32 +83,25 @@
     📍 Location: B26 2NX</p>
   </div>
 
-  <section class="cars">
-    <div class="car">
-      <img src="https://images.autotrader.co.uk/image-gallery/202309287328156?width=800&height=600" alt="BMW 320d M Sport">
-      <h3>2017 BMW 320d M Sport</h3>
-      <p>Auto | Diesel | 80K miles</p>
-      <p>£7,995</p>
-    </div>
+<section class="cars">
+  <div class="car">
+    <img src="https://i.imgur.com/Uixy5Zd.jpg" alt="BMW 320d M Sport">
+    <h3>2017 BMW 320d M Sport</h3>
+    <p>Auto | Diesel | 80K miles</p>
+    <p>£7,995</p>
+  </div>
 
-    <div class="car">
-      <img src="https://media.autotrader.co.uk/image-gallery/202403057761137?width=800&height=600" alt="Seat Leon FR">
-      <h3>2015 Seat Leon 1.4 TSI FR</h3>
-      <p>Cat N | Petrol | 87K miles</p>
-      <p>£4,495</p>
-    </div>
+  <div class="car">
+    <img src="https://i.imgur.com/kYgo6OP.jpg" alt="Seat Leon FR">
+    <h3>2015 Seat Leon 1.4 TSI FR</h3>
+    <p>Cat N | Petrol | 87K miles</p>
+    <p>£4,495</p>
+  </div>
 
-    <div class="car">
-      <img src="https://media.autotrader.co.uk/image-gallery/202405177932268?width=800&height=600" alt="Ford Focus">
-      <h3>2016 Ford Focus ST-Line</h3>
-      <p>Manual | Petrol | 60K miles</p>
-      <p>£5,250</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Kas Automotive. All rights reserved.</p>
-  </footer>
-
-</body>
-</html>
+  <div class="car">
+    <img src="https://i.imgur.com/pCr9F9N.jpg" alt="Ford Focus">
+    <h3>2016 Ford Focus ST-Line</h3>
+    <p>Manual | Petrol | 60K miles</p>
+    <p>£5,250</p>
+  </div>
+</section>
